--- a/index.html
+++ b/index.html
@@ -40,25 +40,18 @@
     </div>
 
     <div class="section-content">
-      <span class="section-index">01</span>
       <h2>Strategy & Vision</h2>
       <p>
         With over a decade of experience shaping digital products, I help
         companies translate complex ideas into clear, actionable strategies.
         Previously led product initiatives at Spotify and Airbnb.
       </p>
-      <div class="logos">
-        <span>Spotify</span>
-        <span>Airbnb</span>
-        <span>Stripe</span>
-      </div>
     </div>
   </section>
 
   <!-- SECTION: PRODUCT LEADERSHIP -->
   <section class="section container two-col reverse">
     <div class="section-content">
-      <span class="section-index">02</span>
       <h2>Product Leadership</h2>
       <ul class="credentials">
         <li>MBA, Business Administration — Harvard</li>
@@ -68,11 +61,6 @@
         <li>Executive Leadership Program — INSEAD</li>
       </ul>
 
-      <div class="logos">
-        <span>Google</span>
-        <span>Meta</span>
-        <span>Tesla</span>
-      </div>
     </div>
 
     <div class="image-card">
@@ -87,7 +75,6 @@
     </div>
 
     <div class="section-content">
-      <span class="section-index">03</span>
       <h2>Growth & Scale</h2>
 
       <div class="experience-list">
@@ -134,18 +121,12 @@
 
             </div>
 
-      <div class="logos">
-        <span>Uber</span>
-        <span>Dropbox</span>
-        <span>Notion</span>
-      </div>
     </div>
   </section>
 
   <!-- SECTION: ADVISORY -->
   <section class="section container two-col reverse">
     <div class="section-content">
-      <span class="section-index">04</span>
       <h2>Advisory & Consulting</h2>
       <p>
         Available for select advisory roles and consulting engagements. I work
@@ -153,15 +134,10 @@
         navigate scaling.
       </p>
 
-      <div class="logos">
-        <span>YC Companies</span>
-        <span>Sequoia Portfolio</span>
-        <span>a16z</span>
-      </div>
     </div>
 
     <div class="image-card">
-      <img src="https://via.placeholder.com/450x450" alt="Portrait" />
+      <img src="./images/image_5.jpg" alt="Portrait" />
     </div>
   </section>
 
