updated the email CTA to send email

--- a/index.html
+++ b/index.html
@@ -23,7 +23,13 @@
 
       <div class="hero-actions">
         <a href="#" class="btn btn-primary">Book a 1:1 Strategy Call</a>
-        <a href="#" class="btn btn-secondary">Send an email →</a>
+        <a
+            href="mailto:hello@example.com?subject=Strategy%20Inquiry"
+            class="btn btn-secondary"
+            >
+            Send an email →
+        </a>
+
       </div>
     </div>
 
@@ -156,7 +162,13 @@
 
       <div class="cta-actions">
         <a href="#" class="btn btn-light">Book a 15-Min Call</a>
-        <a href="#" class="btn btn-outline">Send an Email</a>
+        <a
+            href="mailto:hello@example.com?subject=New%20Project%20Inquiry"
+            class="btn btn-outline"
+            >
+            Send an Email
+        </a>
+
       </div>
     </div>
   </footer>
