--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-
   <!-- HERO -->
   <header class="hero container">
     <div class="hero-content">
@@ -22,7 +21,14 @@
       </p>
 
       <div class="hero-actions">
-        <a href="#" class="btn btn-primary">Book a 1:1 Strategy Call</a>
+        <a
+            href="https://calendly.com/eshokrgo/15min"
+            class="btn btn-primary"
+            onclick="Calendly.initPopupWidget({ url: 'https://calendly.com/eshokrgo/15min' }); return false;"
+            >
+            Book a 1:1 Strategy Call
+        </a>
+
         <a
             href="mailto:hello@example.com?subject=Strategy%20Inquiry"
             class="btn btn-secondary"
@@ -161,7 +167,14 @@
       </p>
 
       <div class="cta-actions">
-        <a href="#" class="btn btn-light">Book a 15-Min Call</a>
+        <a
+            href="https://calendly.com/eshokrgo/15min"
+            class="btn btn-light"
+            onclick="Calendly.initPopupWidget({ url: 'https://calendly.com/eshokrgo/15min' }); return false;"
+            >
+            Book a 15-Min Call
+        </a>
+
         <a
             href="mailto:hello@example.com?subject=New%20Project%20Inquiry"
             class="btn btn-outline"
@@ -172,6 +185,10 @@
       </div>
     </div>
   </footer>
+
+    <script
+        src="https://assets.calendly.com/assets/external/widget.js"
+    ></script>
 
 </body>
 </html>
