calendly pop-up fix

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Product Leader & Advisor</title>
   <link rel="stylesheet" href="styles.css" />
+  <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+  <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" defer></script>
 </head>
 <body>
   <!-- HERO -->
@@ -185,10 +187,5 @@
       </div>
     </div>
   </footer>
-
-    <script
-        src="https://assets.calendly.com/assets/external/widget.js"
-    ></script>
-
 </body>
 </html>
