button text update

--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
             class="btn btn-primary"
             onclick="Calendly.initPopupWidget({ url: 'https://calendly.com/eshokrgo/15min' }); return false;"
             >
-            Book a 1:1 Strategy Call
+            Book a Free 15-Min Call
         </a>
 
         <a
             href="mailto:hello@example.com?subject=Strategy%20Inquiry"
             class="btn btn-secondary"
             >
-            Send an email →
+            Send an Email →
         </a>
 
       </div>
@@ -174,7 +174,7 @@
             class="btn btn-light"
             onclick="Calendly.initPopupWidget({ url: 'https://calendly.com/eshokrgo/15min' }); return false;"
             >
-            Book a 15-Min Call
+            Book a Free 15-Min Call
         </a>
 
         <a
