--- a/index.html
+++ b/index.html
@@ -28,14 +28,7 @@
             class="btn btn-primary"
             onclick="Calendly.initPopupWidget({ url: 'https://calendly.com/eshokrgo/15min' }); return false;"
             >
-            Book a Free 15-Min Call
-        </a>
-
-        <a
-            href="mailto:hello@example.com?subject=Strategy%20Inquiry"
-            class="btn btn-secondary"
-            >
-            Send an Email →
+            Get More Information
         </a>
 
       </div>
@@ -174,16 +167,8 @@
             class="btn btn-light"
             onclick="Calendly.initPopupWidget({ url: 'https://calendly.com/eshokrgo/15min' }); return false;"
             >
-            Book a Free 15-Min Call
+            Get More Information
         </a>
-
-        <a
-            href="mailto:hello@example.com?subject=New%20Project%20Inquiry"
-            class="btn btn-outline"
-            >
-            Send an Email
-        </a>
-
       </div>
     </div>
   </footer>
