updates to copy and image

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Product Leader & Advisor</title>
+  <title>Tutoring by Ehsan Shokrgozar</title>
   <link rel="stylesheet" href="styles.css" />
   <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
   <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" defer></script>
@@ -12,14 +12,13 @@
   <!-- HERO -->
   <header class="hero container">
     <div class="hero-content">
-      <span class="eyebrow">Product Leader & Advisor</span>
+      <span class="eyebrow">Experienced Tutor</span>
       <h1>
-        Building products<br />
-        <span class="muted">that matter.</span>
+        Making the Complex<br />
+        <span class="muted">Simple.</span>
       </h1>
       <p class="hero-description">
-        I partner with ambitious teams to create digital experiences that
-        transform industries and delight millions.
+        I specialize in deconstructing difficult subjects into easily understandable pieces that build a student's confidence.
       </p>
 
       <div class="hero-actions">
@@ -36,7 +35,7 @@
 
     <div class="hero-image">
       <img src="./images/image_1.jpg" alt="Portrait" />
-      <span class="badge">15+<br />Years Experience</span>
+      <span class="badge">Ehsan Shokrgozar</span>
     </div>
   </header>
 
@@ -47,11 +46,15 @@
     </div>
 
     <div class="section-content">
-      <h2>Strategy & Vision</h2>
+      <h2>My Teaching Style</h2>
       <p>
-        With over a decade of experience shaping digital products, I help
-        companies translate complex ideas into clear, actionable strategies.
-        Previously led product initiatives at Spotify and Airbnb.
+        Many students struggle not because they lack ability, but because they are taught using rigid, complex frameworks. 
+        I believe that any concept, no matter how advanced, can be broken down into intuitive pieces. 
+        My mission is to strip away the frustration of learning and replace it with the Aha! moment that changes everything.
+        <br><br>
+        I tailor my explanations to each student’s unique learning style. This builds the confidence a student needs to lose 
+        the embarrassment of asking for help, empowering them to advocate for their own understanding and ensuring they never 
+        fall behind again.
       </p>
     </div>
   </section>
