fixed education section

--- a/index.html
+++ b/index.html
@@ -62,14 +62,52 @@
   <!-- SECTION: PRODUCT LEADERSHIP -->
   <section class="section container two-col reverse">
     <div class="section-content">
-      <h2>Product Leadership</h2>
-      <ul class="credentials">
-        <li>MBA, Business Administration — Harvard</li>
-        <li>Certified Scrum Product Owner (CSPO)</li>
-        <li>Professional Certificate in Product Management — Stanford</li>
-        <li>AWS Certified Solutions Architect</li>
-        <li>Executive Leadership Program — INSEAD</li>
-      </ul>
+      <h2>Education and Certifications</h2>
+
+      <hr style="margin: 1.5em 0; border-top: solid 1px #eeeeee;" />
+    <ul style="list-style: disc; padding-left: 1.5em; text-align: left; margin-bottom: 1.5em;">
+        <li style="margin-bottom: 0.5em;">
+            <div style="display: flex; justify-content: space-between; align-items: baseline;">
+                <span><strong>B.Sc. Computing Science & Math</strong></span>
+                <span style="color: #999; font-size: 0.9em; margin-left: 10px;">2009</span>
+            </div>
+        </li>
+        <li style="margin-bottom: 0.5em;">
+            <div style="display: flex; justify-content: space-between; align-items: baseline;">
+                <span><strong>M.Sc. Computing Science (On Hold)</strong></span>
+                <span style="color: #999; font-size: 0.9em; margin-left: 10px;">2010</span>
+            </div>
+        </li>
+        <li style="margin-bottom: 0.5em;">
+            <div style="display: flex; justify-content: space-between; align-items: baseline;">
+                <span><strong>Diploma, 3D Animation</strong></span>
+                <span style="color: #999; font-size: 0.9em; margin-left: 10px;">2005</span>
+            </div>
+        </li>
+    </ul>
+
+    <hr style="margin: 1.5em 0; border-top: solid 1px #eeeeee;" />
+    
+    <ul style="list-style: disc; padding-left: 1.5em; text-align: left;">
+        <li style="margin-bottom: 0.5em;">
+            <div style="display: flex; justify-content: space-between; align-items: baseline;">
+                <span><a href="https://certificates.chronus.com/certificates/cf-75c4db77-e53d-4e0f-83f3-148d0b47ba45-1622639" target="_blank"><strong>Chronus Certified Mentor</strong></a></span>
+                <span style="color: #999; font-size: 0.9em; margin-left: 10px;">2024</span>
+            </div>
+        </li>
+        <li style="margin-bottom: 0.5em;">
+            <div style="display: flex; justify-content: space-between; align-items: baseline;">
+                <span><a href="https://www.credly.com/badges/ffbedace-4b18-440b-a9b5-5b9ec9090399" target="_blank"><strong>AWS Certified Solutions Architect – Professional</strong></a></span>
+                <span style="color: #999; font-size: 0.9em; margin-left: 10px;">2024</span>
+            </div>
+        </li>
+        <li style="margin-bottom: 0.5em;">
+            <div style="display: flex; justify-content: space-between; align-items: baseline;">
+                <span><a href="https://www.credly.com/badges/6b7935ec-6861-4fc3-a2d6-c739b5bdb43f" target="_blank"><strong>AWS Certified Advanced Networking – Specialty</strong></a></span>
+                <span style="color: #999; font-size: 0.9em; margin-left: 10px;">2024</span>
+            </div>
+        </li>
+    </ul>
 
     </div>
 
