--- a/index.html
+++ b/index.html
@@ -68,16 +68,17 @@
     <ul style="list-style: disc; padding-left: 1.5em; text-align: left; margin-bottom: 1.5em;">
         <li style="margin-bottom: 0.5em;">
             <div style="display: flex; justify-content: space-between; align-items: baseline;">
-                <span><strong>B.Sc. Computing Science & Math</strong></span>
-                <span style="color: #999; font-size: 0.9em; margin-left: 10px;">2009</span>
+                <span><strong>M.Sc. Candidate Computing Science</strong></span>
+                <span style="color: #999; font-size: 0.9em; margin-left: 10px;">2011</span>
             </div>
         </li>
         <li style="margin-bottom: 0.5em;">
             <div style="display: flex; justify-content: space-between; align-items: baseline;">
-                <span><strong>M.Sc. Computing Science (On Hold)</strong></span>
-                <span style="color: #999; font-size: 0.9em; margin-left: 10px;">2010</span>
+                <span><strong>B.Sc. Computing Science & Math</strong></span>
+                <span style="color: #999; font-size: 0.9em; margin-left: 10px;">2009</span>
             </div>
         </li>
+        
         <li style="margin-bottom: 0.5em;">
             <div style="display: flex; justify-content: space-between; align-items: baseline;">
                 <span><strong>Diploma, 3D Animation</strong></span>
@@ -123,48 +124,60 @@
     </div>
 
     <div class="section-content">
-      <h2>Growth & Scale</h2>
+      <h2>Professional Experience</h2>
 
       <div class="experience-list">
+        
 
             <div class="experience-item">
                 <div class="experience-header">
-                <strong>VP of Product</strong>
-                <span class="experience-meta">Notion · 2022–Present</span>
+                <strong>Senior Solutions Architect | M&E Specialist</strong>
+                <span class="experience-meta">Amazon Web Services (AWS) · 2022–2026</span>
                 </div>
-                <p>
+                <!-- <p>
                 Leading product strategy and growth initiatives across all product lines.
-                </p>
+                </p> -->
             </div>
 
             <div class="experience-item">
                 <div class="experience-header">
-                <strong>Director of Product</strong>
-                <span class="experience-meta">Dropbox · 2019–2022</span>
+                <strong>Product Manager / Software Engineer</strong>
+                <span class="experience-meta">Autodesk · 2022–2022</span>
                 </div>
-                <p>
+                <!-- <p>
                 Scaled the core collaboration platform from 50M to 200M users.
-                </p>
+                </p> -->
             </div>
 
             <div class="experience-item">
                 <div class="experience-header">
-                <strong>Senior Product Manager</strong>
-                <span class="experience-meta">Uber · 2016–2019</span>
+                <strong>Technical Director / Software Engineer</strong>
+                <span class="experience-meta">Digital Domain 3.0 · 2017-2020</span>
                 </div>
-                <p>
-                Launched Uber Eats in 15 new markets, driving 300% revenue growth.
-                </p>
-            </div>
-
-            <div class="experience-item">
-                <div class="experience-header">
-                <strong>Product Manager</strong>
-                <span class="experience-meta">LinkedIn · 2013–2016</span>
-                </div>
-                <p>
+                <!-- <p>
                 Built and shipped the redesigned LinkedIn mobile experience.
-                </p>
+                </p> -->
+            </div>
+
+
+            <div class="experience-item">
+                <div class="experience-header">
+                <strong>Pipeline Technical Director</strong>
+                <span class="experience-meta">Image Engine Design Inc. · 2013-2015</span>
+                </div>
+                <!-- <p>
+                Launched Uber Eats in 15 new markets, driving 300% revenue growth.
+                </p> -->
+            </div>
+
+            <div class="experience-item">
+                <div class="experience-header">
+                <strong>Technical Director</strong>
+                <span class="experience-meta">DreamWorks Animation · 2012-2013</span>
+                </div>
+                <!-- <p>
+                Launched Uber Eats in 15 new markets, driving 300% revenue growth.
+                </p> -->
             </div>
 
             </div>
