--- a/index.html
+++ b/index.html
@@ -66,22 +66,30 @@
 
       <hr style="margin: 1.5em 0; border-top: solid 1px #eeeeee;" />
     <ul style="list-style: disc; padding-left: 1.5em; text-align: left; margin-bottom: 1.5em;">
-        <li style="margin-bottom: 0.5em;">
-            <div style="display: flex; justify-content: space-between; align-items: baseline;">
-                <span><strong>M.Sc. Candidate Computing Science</strong></span>
-                <span style="color: #999; font-size: 0.9em; margin-left: 10px;">2011</span>
+            <li style="margin-bottom: 1em;">
+            <div style="display: flex; justify-content: space-between; align-items: flex-start;">
+                <div>
+                    <strong>M.Sc. Candidate Computing Science</strong><br />
+                    <span style="color: #999; font-size: 0.85em; text-transform: uppercase; letter-spacing: 1px;">Simon Fraser University</span>
+                </div>
+                <span style="color: #999; font-size: 0.9em; margin-left: 10px;">2011</span> 
             </div>
         </li>
-        <li style="margin-bottom: 0.5em;">
-            <div style="display: flex; justify-content: space-between; align-items: baseline;">
-                <span><strong>B.Sc. Computing Science & Math</strong></span>
+        <li style="margin-bottom: 1em;">
+            <div style="display: flex; justify-content: space-between; align-items: flex-start;">
+                <div>
+                    <strong>B.Sc. Computing Science & Math</strong><br />
+                    <span style="color: #999; font-size: 0.85em; text-transform: uppercase; letter-spacing: 1px;">Simon Fraser University</span>
+                </div>
                 <span style="color: #999; font-size: 0.9em; margin-left: 10px;">2009</span>
             </div>
         </li>
-        
-        <li style="margin-bottom: 0.5em;">
-            <div style="display: flex; justify-content: space-between; align-items: baseline;">
-                <span><strong>Diploma, 3D Animation</strong></span>
+        <li style="margin-bottom: 1em;">
+            <div style="display: flex; justify-content: space-between; align-items: flex-start;">
+                <div>
+                    <strong>Diploma, 3D Animation</strong><br />
+                    <span style="color: #999; font-size: 0.85em; text-transform: uppercase; letter-spacing: 1px;">Vancouver Film School</span>
+                </div>
                 <span style="color: #999; font-size: 0.9em; margin-left: 10px;">2005</span>
             </div>
         </li>
@@ -128,59 +136,53 @@
 
       <div class="experience-list">
         
-
-            <div class="experience-item">
-                <div class="experience-header">
-                <strong>Senior Solutions Architect | M&E Specialist</strong>
-                <span class="experience-meta">Amazon Web Services (AWS) · 2022–2026</span>
+        <ul style="list-style: disc; padding-left: 1.5em; text-align: left;">
+        <li style="margin-bottom: 1em;">
+            <div style="display: flex; justify-content: space-between; align-items: flex-start;">
+                <div>
+                    <strong>Software Engineer</strong><br />
+                    <span style="color: #999; font-size: 0.85em; text-transform: uppercase; letter-spacing: 1px;">Amazon Web Services (AWS)</span>
                 </div>
-                <!-- <p>
-                Leading product strategy and growth initiatives across all product lines.
-                </p> -->
+                <span style="color: #999; font-size: 0.9em; margin-left: 10px; white-space: nowrap;">2021 – 2026</span>
             </div>
-
-            <div class="experience-item">
-                <div class="experience-header">
-                <strong>Product Manager / Software Engineer</strong>
-                <span class="experience-meta">Autodesk · 2022–2022</span>
+        </li>
+        <li style="margin-bottom: 1em;">
+            <div style="display: flex; justify-content: space-between; align-items: flex-start;">
+                <div>
+                    <strong>Senior Software Engineer</strong><br />
+                    <span style="color: #999; font-size: 0.85em; text-transform: uppercase; letter-spacing: 1px;">Autodesk</span>
                 </div>
-                <!-- <p>
-                Scaled the core collaboration platform from 50M to 200M users.
-                </p> -->
+                <span style="color: #999; font-size: 0.9em; margin-left: 10px; white-space: nowrap;">2020 – 2021</span>
             </div>
-
-            <div class="experience-item">
-                <div class="experience-header">
-                <strong>Technical Director / Software Engineer</strong>
-                <span class="experience-meta">Digital Domain 3.0 · 2017-2020</span>
+        </li>
+        <li style="margin-bottom: 1em;">
+            <div style="display: flex; justify-content: space-between; align-items: flex-start;">
+                <div>
+                    <strong>Technical Director</strong><br />
+                    <span style="color: #999; font-size: 0.85em; text-transform: uppercase; letter-spacing: 1px;">Digital Domain 3.0</span>
                 </div>
-                <!-- <p>
-                Built and shipped the redesigned LinkedIn mobile experience.
-                </p> -->
+                <span style="color: #999; font-size: 0.9em; margin-left: 10px; white-space: nowrap;">2015 – 2020</span>
             </div>
-
-
-            <div class="experience-item">
-                <div class="experience-header">
-                <strong>Pipeline Technical Director</strong>
-                <span class="experience-meta">Image Engine Design Inc. · 2013-2015</span>
+        </li>
+        <li style="margin-bottom: 1em;">
+            <div style="display: flex; justify-content: space-between; align-items: flex-start;">
+                <div>
+                    <strong>Pipeline Technical Director</strong><br />
+                    <span style="color: #999; font-size: 0.85em; text-transform: uppercase; letter-spacing: 1px;">Image Engine Design Inc.</span>
                 </div>
-                <!-- <p>
-                Launched Uber Eats in 15 new markets, driving 300% revenue growth.
-                </p> -->
+                <span style="color: #999; font-size: 0.9em; margin-left: 10px; white-space: nowrap;">2013 – 2015</span>
             </div>
-
-            <div class="experience-item">
-                <div class="experience-header">
-                <strong>Technical Director</strong>
-                <span class="experience-meta">DreamWorks Animation · 2012-2013</span>
+        </li>
+        <li style="margin-bottom: 1em;">
+            <div style="display: flex; justify-content: space-between; align-items: flex-start;">
+                <div>
+                    <strong>Technical Director</strong><br />
+                    <span style="color: #999; font-size: 0.85em; text-transform: uppercase; letter-spacing: 1px;">DreamWorks Animation</span>
                 </div>
-                <!-- <p>
-                Launched Uber Eats in 15 new markets, driving 300% revenue growth.
-                </p> -->
+                <span style="color: #999; font-size: 0.9em; margin-left: 10px; white-space: nowrap;">2012 – 2013</span>
             </div>
-
-            </div>
+        </li>
+    </ul>
 
     </div>
   </section>
