Updated location and final section

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Tutoring by Ehsan Shokrgozar</title>
+  <title>Parksville & Qualicum Beach Math and Science Tutoring</title>
   <link rel="stylesheet" href="styles.css" />
   <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
   <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" defer></script>
@@ -12,6 +12,11 @@
   <!-- HERO -->
   <header class="hero container">
     <div class="hero-content">
+
+    <h2 class="location-title">
+        Parksville / Qualicum Beach Tutoring
+    </h2>
+
       <span class="eyebrow">Experienced Tutor</span>
       <h1>
         Making the Complex<br />
@@ -207,14 +212,15 @@
   <!-- CTA -->
   <footer class="cta">
     <div class="cta-content">
-      <span class="eyebrow light">Let’s connect</span>
+      <!-- <span class="eyebrow light">Let’s connect</span> -->
       <h2>
-        Ready to build something<br />
-        <span class="muted">extraordinary?</span>
+        Interested in tutoring support?<br />
+        <span class="muted">Let's connect</span>
       </h2>
       <p>
-        I’m always open to discussing new projects, creative ideas, or
-        opportunities to be part of your vision.
+        When you get in touch, please include the student’s grade level, subjects, 
+        and any specific areas you’d like to focus on so we can make the most 
+        of our conversation.
       </p>
 
       <div class="cta-actions">
