--- a/index.html
+++ b/index.html
@@ -194,15 +194,42 @@
 
   <!-- SECTION: ADVISORY -->
   <section class="section container two-col reverse">
-    <div class="section-content">
-      <h2>Advisory & Consulting</h2>
-      <p>
-        Available for select advisory roles and consulting engagements. I work
-        with founders and executives to unlock growth, build culture, and
-        navigate scaling.
-      </p>
+<article>
+    <header>
+        <h2>Rates</h2>
+    </header>
+    
+    <ul style="list-style: disc; padding-left: 1.5em; text-align: left;">
+        <li style="margin-bottom: 1em;">
+            <div style="display: flex; justify-content: space-between; align-items: baseline;">
+                <div>
+                    <strong>One-on-One Tutoring</strong><br />
+                    <span style="color: #999; font-size: 0.85em; text-transform: uppercase; letter-spacing: 1px;">Personalized Attention</span>
+                </div>
+                <span style="color: #999; font-size: 1.1em; font-weight: bold; margin-left: 10px; white-space: nowrap;">$60 / hr</span>
+            </div>
+        </li>
+        <li style="margin-bottom: 1em;">
+            <div style="display: flex; justify-content: space-between; align-items: baseline;">
+                <div>
+                    <strong>Semi-Private (2 Students)</strong><br />
+                    <span style="color: #999; font-size: 0.85em; text-transform: uppercase; letter-spacing: 1px;">Learn with a Peer</span>
+                </div>
+                <span style="color: #999; font-size: 1.1em; font-weight: bold; margin-left: 10px; white-space: nowrap;">$50 / hr</span>
+            </div>
+        </li>
+        <li style="margin-bottom: 1em;">
+            <div style="display: flex; justify-content: space-between; align-items: baseline;">
+                <div>
+                    <strong>Small Groups (3+)</strong><br />
+                    <span style="color: #999; font-size: 0.85em; text-transform: uppercase; letter-spacing: 1px;">Learning Pods & Workshops</span>
+                </div>
+                <span style="color: #999; font-size: 0.9em; margin-left: 10px; white-space: nowrap;">Inquire</span>
+            </div>
+        </li>
+    </ul>
 
-    </div>
+</article>
 
     <div class="image-card">
       <img src="./images/image_5.jpg" alt="Portrait" />
