Updated the CTA text

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             class="btn btn-primary"
             onclick="Calendly.initPopupWidget({ url: 'https://calendly.com/eshokrgo/15min' }); return false;"
             >
-            Get More Information
+            Get In Touch
         </a>
 
       </div>
@@ -256,7 +256,7 @@
             class="btn btn-light"
             onclick="Calendly.initPopupWidget({ url: 'https://calendly.com/eshokrgo/15min' }); return false;"
             >
-            Get More Information
+            Start the Conversation
         </a>
       </div>
     </div>
