Tried fixing mobile

--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@
 <body>
   <!-- HERO -->
   <header class="hero container">
+    <div class="mobile-location-title">
+        <h2>Parksville / Qualicum Beach Tutoring</h2>
+        <p>Experienced Tutor</p>
+    </div>
+
     <div class="hero-content">
-
-    <h2 class="location-title">
-        Parksville / Qualicum Beach Tutoring
-    </h2>
-
-      <span class="eyebrow">Experienced Tutor</span>
       <h1>
         Making the Complex<br />
         <span class="muted">Simple.</span>
